--- a/pamatovac/pamatovac/MainPage.xaml
+++ b/pamatovac/pamatovac/MainPage.xaml
@@ -7,7 +7,7 @@
     <StackLayout>
         <Label Text="Pamatovač" FontSize="52" TextColor="#edf2f4" HorizontalTextAlignment="Center"/>
         <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-            <Label x:Name="name" Text="Lukáš" FontSize="52" TextColor="#edf2f4" HorizontalTextAlignment="Center" Margin="0, 0, 0, 30"/>
+            <Label x:Name="name" Text="Jméno" FontSize="52" TextColor="#edf2f4" HorizontalTextAlignment="Center" Margin="0, 0, 0, 30"/>
             <Button Text="Pokračovat" BackgroundColor="#8d99ae" TextColor="#edf2f4" VerticalOptions="EndAndExpand" WidthRequest="200" CornerRadius="30" Clicked="Continue_Button_Clicked"/>
         </StackLayout>
     </StackLayout>
